# gesher-homework

./: .gitignore  README.md  client_secret.json  pyproject.toml
config/: settings.py  urls.py
googlelogin/: models.py  views.py
googlelogin/migrations/: 0001_initial.py
googlelogin/templates/googlelogin/: home.html
googlelogin/templates/registration/: login.html
